# involutions

./: .gitignore  CMakeLists.txt  README.md
src/: alloc.cpp  alloc.h  avx2_cube.h  bits.h  ccoord.h  corner_hash.cpp  corner_hash.h  cperm16.cpp  cperm16.h  cprune.cpp  cprune.h  cube.cpp  cube.h  ecoord.h  ecsolver.cpp  ecsolver.h  eperm48.cpp  eperm48.h  eprune.cpp  eprune.h  interrupt.cpp  interrupt.h  involution.cpp  involution.h  main.cpp  move.h  moveseq.cpp  moveseq.h  neighborsolver.cpp  neighborsolver.h  orient.cpp  orient.h  status.cpp  status.h  sym.cpp  sym.h  tables.h  thread.h  tracker.cpp  tracker.h
tables/: CACHEDIR.TAG
tests/: CMakeLists.txt  CcoordTest.cpp  CornerHashTest.cpp  CpermTest.cpp  CpruneTest.cpp  CubeTest.cpp  EcoordTest.cpp  EpermTest.cpp  EpruneTest.cpp  InvolutionTest.cpp  MoveTest.cpp  OrientTest.cpp  RunAllTests.cpp  SymTest.cpp  TrackerTest.cpp  test_util.h
